# Csnake

./: .gitignore  CMakeLists.txt  README.md
inc/menu/: menu.h
inc/screen/: screen.h
inc/sigterm/: sigterm.h
inc/snake/: snake.h
src/: main.c
src/gif/: CMakeLists.txt  example.c
src/menu/: menu.c
src/screen/: screen.c
src/sigterm/: sigterm.c
src/snake/: snake.c
